tests/kyverno-policies/pod-lifetime/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-lifetime
policies:
  - policy.yaml
resources:
  - resources.yaml
results:
  - policy: pod-lifetime
    rule: pods-require-lifetime
    resources:
      - test/test-lifetime-skip
    kind: Pod
    result: skip
  - policy: pod-lifetime
    rule: pods-require-lifetime
    resources:
      - user-test/test-lifetime-pass
    kind: Pod
    result: pass
  - policy: pod-lifetime
    rule: pods-require-lifetime
    resources:
      - user-test/test-lifetime-fail
    kind: Pod
    result: fail
  - policy: pod-lifetime
    rule: pods-max-lifetime
    resources:
      - test/test-max-lifetime-skip
    kind: Pod
    result: skip
  - policy: pod-lifetime
    rule: pods-max-lifetime
    resources:
      - user-test/test-lifetime-max-pass
    kind: Pod
    result: pass
  - policy: pod-lifetime
    rule: pods-max-lifetime
    resources:
      - user-test/test-lifetime-max-fail
    kind: Pod
    result: fail
